--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Makes lunch decisions",
   "repository": "https://github.com/mfraezz/flunchbot",
   "author": "mfraezz",
+  "license": "MIT",
   "dependencies": {
     "botkit": "0.2.2",
     "factual-api": "1.0.7"
