--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "botkit": "0.2.2",
-    "factual-api": "1.0.7"
+    "factual-api": "1.0.7",
+    "moment": "^2.14.0"
   }
 }
